--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd src/index.ts",
+    "start": "tsnd --notify=false src/index.ts",
     "build": "tsc"
   },
   "dependencies": {
+    "fastify": "^2.15.1",
+    "next": "^9.4.4",
+    "next-server": "^9.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -23,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
+    "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.5"
   }
 }
