--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,30 @@
-node_modules
-bin
-*.log
-mochawesome-reports
-output-emails
-coverage
-.data
-npm-debug*
-upload/**
-v8-compile-cache*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-.idea
-dist/*
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
