--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,26 @@
 {
-    "compilerOptions": {
-      "typeRoots": [
-        "./node_modules/@types",
-        "./src/server/declarations"
-      ],
-      "target": "es2020",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "allowSyntheticDefaultImports": true,
-      "removeComments": true,
-      "skipLibCheck": true,
-      "noImplicitAny": true,
-      "noEmitOnError": true,
-      "noUnusedLocals": true,
-      "importHelpers": true,
-      "inlineSourceMap": false,
-      "inlineSources": false,
-      "alwaysStrict": true,
-      "allowJs": true,
-      "rootDir": "./src",
-      "baseUrl": "./src",
-      "outDir": "./dist"
-    },
-    "include": [
-      "src/**/*.ts",
-      "src/**/*.d.ts"
-    ],
-    "compileOnSave": false,
-    "exclude": ["node_modules", "dist"]
-  }
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "jsx": "preserve",
+    "lib": ["dom", "es2017"],
+    "baseUrl": ".",
+    "moduleResolution": "node",
+    "strict": true,
+    "allowJs": true,
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "isolatedModules": true,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
+  },
+  "exclude": ["dist", ".next", "out", "next.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+}
